Remove Name/DOB and add Tenancy Number, fix reference to 40chars

--- a/templates/form.html.twig
+++ b/templates/form.html.twig
@@ -24,31 +24,21 @@
     <form method="post" action="index.php">
 
         <div class="mb-3">
-            <label class="form-label" for="name">Your Full Name</label>
+            <label class="form-label" for="name">Your Tenancy Number</label>
             <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-person-square"></i></span>
-                <input class="form-control" name="name" value="">
+                <input class="form-control" name="tenancynumber" value="">
             </div>
-            <small class="form-text text-muted">Example: Phil Taylor</small>
+            <small class="form-text text-muted">You can find this from correspondence with us</small>
         </div>
 
         <div class="mb-3">
-            <label class="form-label" for="address">Your Address</label>
+            <label class="form-label" for="address">First Line Of Property Address</label>
             <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-house-check-fill"></i></span>
                 <input class="form-control" name="address" value="">
             </div>
-            <small class="form-text text-muted">Your first line of your address, and your postcode.</small>
-        </div>
-
-        <div class="mb-3">
-            <label class="form-label" for="address">Your Date Of Birth</label>
-            <div class="input-group">
-                <span class="input-group-text"><i class="bi bi-calendar"></i></span>
-                <input class="form-control" name="dob" placeholder="dd/mm/yyyy" value="">
-            </div>
-            <small class="form-text text-muted">Used for validation. Please input in format dd/mm/yyyy For example:
-                08/03/1978</small>
+            <small class="form-text text-muted">Please enter the first line of your address including the numbers</small>
         </div>
 
         <div class="mb-3">
