--- a/templates/form.html.twig
+++ b/templates/form.html.twig
@@ -27,7 +27,7 @@
             <label class="form-label" for="name">Your Tenancy Number</label>
             <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-person-square"></i></span>
-                <input class="form-control" name="tenancynumber" value="">
+                <input required class="form-control" name="tenancynumber" value="">
             </div>
             <small class="form-text text-muted">You can find this from correspondence with us</small>
         </div>
@@ -36,7 +36,7 @@
             <label class="form-label" for="address">First Line Of Property Address</label>
             <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-house-check-fill"></i></span>
-                <input class="form-control" name="address" value="">
+                <input required class="form-control" name="address" value="">
             </div>
             <small class="form-text text-muted">Please enter the first line of your address including the numbers</small>
         </div>
@@ -45,7 +45,7 @@
             <label class="form-label" for="amount">Amount To Pay</label>
             <div class="input-group">
                 <span class="input-group-text">£</span>
-                <input class="form-control" name="amount" value="">
+                <input required class="form-control" name="amount" value="">
             </div>
             <small class="form-text text-muted">Example: 99.50 to pay Ninety Nine pounds and fifty
                 pence.</small>
