--- a/templates/form.html.twig
+++ b/templates/form.html.twig
@@ -9,10 +9,10 @@
     <p>You will need to have already been signed up with online/digital banking with your bank, and your bank to be
         opted into OpenBanking.</p>
 
-    <p>After pressing continue you will be given a choice of banks. If your bank is listed then select its icon, or its
+    <p>After pressing continue, you will be given a choice of banks. If your bank is listed, then select its icon, or its
         name from the dropdown list.</p>
 
-    <p>If your bank is not listed, then you will not be able to use this online service and you should contact us to
+    <p>If your bank is not listed, then you will not be able to use this online service, and you should contact us to
         make payment manually.</p>
 
     <p class="mt-3">If you encounter any issues with this service please <a
@@ -21,25 +21,33 @@
 
     <hr/>
 
-    <form method="post" action="index.php">
+    <form method="post" action="/index.php">
 
         <div class="mb-3">
-            <label class="form-label" for="name">Your Tenancy Number</label>
+            <label class="form-label text-danger" for="orderId">Order ID To Test In **Live Mode**</label>
             <div class="input-group">
-                <span class="input-group-text"><i class="bi bi-person-square"></i></span>
-                <input required class="form-control" name="tenancynumber" value="">
+                <span class="input-group-text"><i class="bi bi-bank"></i></span>
+                <input required class="form-control" id="orderId" name="orderId" value="">
             </div>
-            <small class="form-text text-muted">You can find this from correspondence with us</small>
         </div>
 
-        <div class="mb-3">
-            <label class="form-label" for="address">First Line Of Property Address</label>
-            <div class="input-group">
-                <span class="input-group-text"><i class="bi bi-house-check-fill"></i></span>
-                <input required class="form-control" name="address" value="">
-            </div>
-            <small class="form-text text-muted">Please enter the first line of your address including the numbers</small>
-        </div>
+{#        <div class="mb-3">#}
+{#            <label class="form-label" for="name">Your Tenancy Number</label>#}
+{#            <div class="input-group">#}
+{#                <span class="input-group-text"><i class="bi bi-person-square"></i></span>#}
+{#                <input required class="form-control" name="tenancynumber" value="">#}
+{#            </div>#}
+{#            <small class="form-text text-muted">You can find this from correspondence with us</small>#}
+{#        </div>#}
+
+{#        <div class="mb-3">#}
+{#            <label class="form-label" for="address">First Line Of Property Address</label>#}
+{#            <div class="input-group">#}
+{#                <span class="input-group-text"><i class="bi bi-house-check-fill"></i></span>#}
+{#                <input required class="form-control" name="address" value="">#}
+{#            </div>#}
+{#            <small class="form-text text-muted">Please enter the first line of your address including the numbers</small>#}
+{#        </div>#}
 
         <div class="mb-3">
             <label class="form-label" for="amount">Amount To Pay</label>
