--- a/templates/form.html.twig
+++ b/templates/form.html.twig
@@ -21,7 +21,7 @@
 
     <hr/>
 
-    <form method="post" action="/index.php">
+    <form method="post" action="index.php">
 
         <div class="mb-3">
             <label class="form-label text-danger" for="orderId">Order ID To Test In **Live Mode**</label>
