--- a/templates/form.html.twig
+++ b/templates/form.html.twig
@@ -23,22 +23,15 @@
 
     <form method="post" action="index.php">
 
-        <div class="mb-3">
-            <label class="form-label text-danger" for="orderId">Order ID To Test In **Live Mode**</label>
-            <div class="input-group">
-                <span class="input-group-text"><i class="bi bi-bank"></i></span>
-                <input required class="form-control" id="orderId" name="orderId" value="">
-            </div>
-        </div>
 
-{#        <div class="mb-3">#}
-{#            <label class="form-label" for="name">Your Tenancy Number</label>#}
-{#            <div class="input-group">#}
-{#                <span class="input-group-text"><i class="bi bi-person-square"></i></span>#}
-{#                <input required class="form-control" name="tenancynumber" value="">#}
-{#            </div>#}
-{#            <small class="form-text text-muted">You can find this from correspondence with us</small>#}
-{#        </div>#}
+        <div class="mb-3">
+            <label class="form-label" for="name">Your Tenancy Number (6 digits)</label>
+            <div class="input-group">
+                <span class="input-group-text"><i class="bi bi-person-square"></i></span>
+                <input required class="form-control" name="tenancynumber" value="">
+            </div>
+            <small class="form-text text-muted">You can find this from correspondence with us</small>
+        </div>
 
 {#        <div class="mb-3">#}
 {#            <label class="form-label" for="address">First Line Of Property Address</label>#}
