--- a/templates/template.html.twig
+++ b/templates/template.html.twig
@@ -22,7 +22,7 @@
         <img src="https://www.ospreyhousing.org.uk/images/logos/osprey-housing-logo.png" alt="Osprey Housing">
     </div>
     <hr/>
-    <div class="col-6">
+    <div class="col-12 col-md-6">
         {% block body %}{% endblock %}
     </div>
 </div>
