requested changes including timezone

--- a/templates/form.html.twig
+++ b/templates/form.html.twig
@@ -25,22 +25,13 @@
 
 
         <div class="mb-3">
-            <label class="form-label" for="name">Your Tenancy Number (6 digits)</label>
+            <label class="form-label" for="name">Tenancy Reference Number</label>
             <div class="input-group">
                 <span class="input-group-text"><i class="bi bi-person-square"></i></span>
                 <input required class="form-control" name="tenancynumber" value="">
             </div>
             <small class="form-text text-muted">You can find this from correspondence with us</small>
         </div>
-
-{#        <div class="mb-3">#}
-{#            <label class="form-label" for="address">First Line Of Property Address</label>#}
-{#            <div class="input-group">#}
-{#                <span class="input-group-text"><i class="bi bi-house-check-fill"></i></span>#}
-{#                <input required class="form-control" name="address" value="">#}
-{#            </div>#}
-{#            <small class="form-text text-muted">Please enter the first line of your address including the numbers</small>#}
-{#        </div>#}
 
         <div class="mb-3">
             <label class="form-label" for="amount">Amount To Pay</label>
